--- a/package.json
+++ b/package.json
@@ -278,14 +278,22 @@
     "@fortawesome/fontawesome-free": "^5.14.0",
     "@hot-loader/react-dom": "^16.13.0",
     "@reduxjs/toolkit": "^1.4.0",
+    "bootstrap": "^4.5.2",
     "connected-react-router": "^6.6.1",
     "electron-debug": "^3.1.0",
     "electron-log": "^4.2.2",
     "electron-updater": "^4.3.1",
+    "formik": "^2.1.5",
     "history": "^4.7.2",
+    "jquery": "^3.5.1",
+    "rc-checkbox": "^2.3.1",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
+    "react-checkbox-group": "^5.0.2",
     "react-dom": "^16.12.0",
     "react-hot-loader": "^4.12.21",
+    "react-icons": "^3.10.0",
+    "react-radio-buttons": "^1.2.2",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
@@ -293,12 +301,7 @@
     "regenerator-runtime": "^0.13.5",
     "source-map-support": "^0.5.19",
     "webfontloader": "^1.6.28",
-    "yup": "^0.29.3",
-    "react-icons": "^3.10.0",
-    "react-bootstrap": "^1.3.0",
-    "jquery": "^3.5.1",
-    "bootstrap": "^4.5.2",
-    "formik": "^2.1.5"
+    "yup": "^0.29.3"
   },
   "devEngines": {
     "node": ">=7.x",
