--- a/package.json
+++ b/package.json
@@ -190,26 +190,27 @@
     "@babel/preset-react": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
     "@babel/register": "^7.10.5",
+    "@types/bootstrap": "^4.5.0",
     "@types/enzyme": "^3.10.5",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/history": "^4.7.6",
     "@types/jest": "^26.0.5",
     "@types/node": "12",
     "@types/react": "^16.9.44",
+    "@types/react-bootstrap": "^1.0.1",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-test-renderer": "^16.9.2",
+    "@types/recharts": "^1.8.14",
     "@types/redux-logger": "^3.0.8",
+    "@types/webfontloader": "^1.6.32",
     "@types/webpack": "^4.41.21",
     "@types/webpack-env": "^1.15.2",
+    "@types/yup": "^0.29.4",
     "@typescript-eslint/eslint-plugin": "^3.6.1",
     "@typescript-eslint/parser": "^3.6.1",
-    "@types/react-bootstrap": "^1.0.1",
-    "@types/webfontloader": "^1.6.32",
-    "@types/yup": "^0.29.4",
-    "@types/bootstrap": "^4.5.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.1.0",
     "babel-loader": "^8.1.0",
@@ -296,6 +297,7 @@
     "react-radio-buttons": "^1.2.2",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
+    "recharts": "^1.8.5",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "regenerator-runtime": "^0.13.5",
