--- a/package.json
+++ b/package.json
@@ -297,6 +297,7 @@
     "react-radio-buttons": "^1.2.2",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
+    "react-select": "^3.1.0",
     "recharts": "^1.8.5",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
