--- a/package.json
+++ b/package.json
@@ -202,6 +202,7 @@
     "@types/react-redux": "^7.1.9",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.5",
+    "@types/react-select": "^3.0.19",
     "@types/react-test-renderer": "^16.9.2",
     "@types/recharts": "^1.8.14",
     "@types/redux-logger": "^3.0.8",
