--- a/package.json
+++ b/package.json
@@ -202,7 +202,7 @@
     "@types/react-redux": "^7.1.9",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.5",
-    "@types/react-select": "^3.0.19",
+    "@types/react-select": "^3.0.20",
     "@types/react-test-renderer": "^16.9.2",
     "@types/recharts": "^1.8.14",
     "@types/redux-logger": "^3.0.8",
@@ -288,6 +288,7 @@
     "formik": "^2.1.5",
     "history": "^4.7.2",
     "jquery": "^3.5.1",
+    "moment": "^2.29.0",
     "rc-checkbox": "^2.3.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
@@ -299,6 +300,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-select": "^3.1.0",
+    "react-to-pdf": "^0.0.13",
     "recharts": "^1.8.5",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
